--- a/mocodo_notebook/sandbox.html
+++ b/mocodo_notebook/sandbox.html
@@ -34,8 +34,8 @@
 <div>
   <span class='relation'>Evaluation</span> (
     <span class='primary'>evaluation_id</span>,
-    <span class='normal'>Date_Contrôle</span>,
-    <span class='normal'>Date_Note_Visible</span>,
+    <span class='normal'>Date_Controle</span>,
+    <span class='normal'>Date_Visible</span>,
     <span class='normal'>#discipline_id</span>,
     <span class='normal'>#professeur_id</span>,
     <span class='normal'>#classe_id</span>,
