frame paramètres évaluation

--- a/mocodo_notebook/sandbox.html
+++ b/mocodo_notebook/sandbox.html
@@ -34,6 +34,7 @@
 <div>
   <span class='relation'>Evaluation</span> (
     <span class='primary'>evaluation_id</span>,
+    <span class='normal'>nom</span>,
     <span class='normal'>Date_Controle</span>,
     <span class='normal'>Date_Visible</span>,
     <span class='normal'>#discipline_id</span>,
