--- a/mocodo_notebook/sandbox.html
+++ b/mocodo_notebook/sandbox.html
@@ -11,73 +11,19 @@
 <body>
 <div id='mld'>
 <div>
-  <span class='relation'>Discipline</span> (
-    <span class='primary'>discipline_id</span>,
-    <span class='normal'>nom</span>
+  <span class='relation'>Administrateur</span> (
+    <span class='primary'>FirstName</span>,
+    <span class='normal'>LastName</span>,
+    <span class='normal'>Gender</span>,
+    <span class='normal'>Birthday</span>,
+    <span class='normal'>Login</span>,
+    <span class='foreign'>Func_Id</span>
   )
 </div>
 <div>
-  <span class='relation'>Enseigner</span> (
-    <span class='primary'>#professeur_id</span>,
-    <span class='primary'>#discipline_id</span>,
-    <span class='primary'>#classe_id</span>
-  )
-</div>
-<div>
-  <span class='relation'>Professeur</span> (
-    <span class='primary'>professeur_id</span>,
-    <span class='normal'>prenom</span>,
-    <span class='normal'>nom</span>,
-    <span class='normal'>titre</span>
-  )
-</div>
-<div>
-  <span class='relation'>Evaluation</span> (
-    <span class='primary'>evaluation_id</span>,
-    <span class='normal'>nom</span>,
-    <span class='normal'>Date_Controle</span>,
-    <span class='normal'>Date_Visible</span>,
-    <span class='normal'>#discipline_id</span>,
-    <span class='normal'>#professeur_id</span>,
-    <span class='normal'>#classe_id</span>,
-    <span class='normal'>#annee_id</span>,
-    <span class='normal'>#periode_id</span>
-  )
-</div>
-<div>
-  <span class='relation'>Classe</span> (
-    <span class='primary'>classe_id</span>,
-    <span class='normal'>nom</span>,
-    <span class='normal'>niveau</span>,
-    <span class='normal'>#annee_id</span>
-  )
-</div>
-<div>
-  <span class='relation'>Evaluer</span> (
-    <span class='primary'>#evaluation_id</span>,
-    <span class='primary'>#eleve_id</span>,
-    <span class='normal'>note</span>
-  )
-</div>
-<div>
-  <span class='relation'>Eleve</span> (
-    <span class='primary'>eleve_id</span>,
-    <span class='normal'>prénom</span>,
-    <span class='normal'>nom</span>,
-    <span class='normal'>genre</span>,
-    <span class='normal'>#classe_id</span>
-  )
-</div>
-<div>
-  <span class='relation'>Periode</span> (
-    <span class='primary'>periode_id</span>,
-    <span class='normal'>nom</span>
-  )
-</div>
-<div>
-  <span class='relation'>AnneeScolaire</span> (
-    <span class='primary'>annee_id</span>,
-    <span class='normal'>nom</span>
+  <span class='relation'>Fonction</span> (
+    <span class='primary'>Func_Id</span>,
+    <span class='normal'>Func_Name</span>
   )
 </div>
 </div>
